# embedding-search

./: .env.template  .gitignore  README.md  pyproject.toml
app/: app.py
src/: config.py  log.py
src/embed/: __init__.py  __main__.py  embed.py  parser.py
src/embed/embedder/: __init__.py  embedder.py  huggingface_embedder.py  openai_embedder.py
src/extract/: __init__.py  __main__.py  extract.py  parser.py
src/extract/extractors/: __init__.py  extractor.py  pdf_extractor.py
src/llm/: __init__.py  __main__.py  llm.py  llm_search.py  parser.py  queries.py
src/llm/llm_models/: __init__.py  llm_model.py  openai_llm_model.py
src/providers/: __init__.py  huggingface_provider.py  openai_provider.py  provider.py
src/search/: __main__.py  parser.py  search.py
